src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>links__c</fullName>
        <label>links</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logText__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>